# do-llms-prefer-philosophy

./: .gitignore  .mcp.json  BROWSER_COSTS_QUICK_REF.md  BROWSER_COST_ANALYSIS.md  BROWSING_CREW.md  COST_ANALYSIS_README.md  COST_QUICK_REFERENCE.md  COST_SUMMARY.md  COST_TRACKING.md  DOCUMENTATION_INDEX.md  EXAMPLES.md  EXPERIMENTS_GUIDE.md  QUICKSTART.md  QUICK_START.md  README.md  RUN_ALL_REQUESTED_MODELS.sh  USAGE_GUIDE.md  WRAPPER_SCRIPTS_README.md  WRAPPER_SUMMARY.md  analyze-browser-sessions.py  analyze-self-reports.py  analyze_costs.py  calculate_browser_costs.py  calculate_token_costs.py  check_mcp_tools.py  devenv.nix  evaluate_browser_sessions.py  evaluate_trajectories.py  main.py  minimal_crewai_playwright.py  pyproject.toml  quick_cost_summary.py  run_all.sh  run_all_models.py  run_browser_experiments.sh  run_conversation_experiments.sh  run_experiments.py  run_tasks.py  secrets.env  simple_wikipedia_browser.py  (+3 more)
data/: browser-agent-cleaned.json  browser-agent.jsonl  browser-agent.jsonl.eval.json  cost_analysis.csv  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764315452.834773-15_iter1.jsonl  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764315452.834773-15_iter1.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764315667.740491-15_iter2.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764315817.527585-15_iter3.jsonl  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764315817.527585-15_iter3.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316121.126947-15_iter4.jsonl  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316121.126947-15_iter4.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316299.322861-15_iter5.jsonl  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316299.322861-15_iter5.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316431.20399-15_iter6.jsonl  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316431.20399-15_iter6.jsonl.eval  do-llms-prefer-philosophy-anthropic-claude-3.7-sonnet-1764316592.233796-15_iter7.jsonl  (+176 more)
(+35 files in other folders)
