[project]
name = "do-llms-prefer-philosophy"
version = "0.2.1"
description = "Project to determine whether llms prefer philosophy when talking to each other and surfing Wikipedia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "anthropic",
    "rich>=14.2.0",
    "inspect-ai>=0.3.140",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=3.27.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
]
test = [
    "ruff>=0.7.4",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
