[project]
name = "do-llms-prefer-philosophy"
version = "0.2.1"
description = "Project to determine whether llms prefer philosophy when talking to each other and surfing Wikipedia."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic",
    "rich>=14.2.0",
    "inspect-ai>=0.3.140",
    "tqdm>=4.67.1",
    "openai>=2.6.1",
    "requests>=2.32.0",
    "crewai>=0.86.0",
    "crewai-tools[mcp]>=0.17.0",
    "mcp>=1.1.2",
    "litellm>=1.80.5",
    "trafilatura>=2.0.0",
    "lancedb>=0.13.0,<0.15.0",
    "pyarrow>=18.1.0",
    "marimo>=0.18.1",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
    "seaborn>=0.13.2",
    "altair>=6.0.0",
    "duckdb>=1.4.2",
    "sqlglot>=28.0.0",
    "plotly>=6.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "commitizen>=3.27.0",
    "jupyter>=1.1.1",
    "python-dotenv>=1.0.1",
]
test = [
    "ruff>=0.7.4",
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
